Remove node_modules and dist from repo

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smart-expense-splitter-frontend",
+  "name": "frontend",
   "private": true,
   "version": "1.0.0",
   "type": "module",
